--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
   },
+  "engines": {
+    "node": "6.11.1",
+    "npm": "4.1.1"
+  },
   "author": "Chieze Franklin",
   "license": "ISC",
   "dependencies": {
